Created with Colaboratory

--- a/LlmForConsulateChatBot.ipynb
+++ b/LlmForConsulateChatBot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPXl+s5KUEh+nLhWEStJEOg",
+      "authorship_tag": "ABX9TyNnIgfUSxzzdSmeE9rwBcHX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "outputs": [],
       "source": [
         "#Install necessary libraries\n",
-        "!pip install langchain #==0.0.191\n",
+        "!pip install langchain\n",
         "!pip install chromadb\n",
         "!pip install tiktoken\n",
         "!pip install unstructured\n",
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "cY4Bs82cosgd"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "6wQnS1q29mlt"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "e5j5cd0Y-d8K"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "CyCJmbg0_leo"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "id": "RaBHB_6t_rIQ",
         "outputId": "56f44ef7-43c4-49d8-e334-f6a905450492"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "2PE2Zy-gAQwE"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
